--- a/index.html
+++ b/index.html
@@ -20,18 +20,23 @@
             width:256px;
             height:256px;
         }
+        .produit-prix{
+            font-size: 32pt;
+            color: darkgreen;
+            font-weight: 900;
+        }
     </style>
 </head>
 
 <body>
     <div id="wrapper">
         <div class="produit">
-            <h1>Titre d'un produit</h1><hr/>
-            <div class="imageProduit"><img src="img/paquet.png" alt=""/></div>
-            <div class="descriptionProduit">description <br/>Lorem ipsum dolor sit<br/> amet consectetur adipisicing elit. Quas necessitatibus<br/> odit beatae iusto magni labore quia facere esse aspernatur quibusdam, distinctio impedit temporibus <br/cumque expedita soluta fugiat. Exercitationem, ex magnam.</div>
+            <h1></h1><hr/>
+            <div class="imageProduit"><img src="" alt=""/></div>
+            <div class="descriptionProduit">jlkhsdljkhsdjlhsdnml</div>
         </div>
     </div>
-    <script src="/src/index.js"></script>
+    <script src="src/index.js"></script>
 </body>
 
 </html>
