creation d'un objet autonome pour  la manip des datas et du DOM ES5

--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
         <div class="produit">
             <h1></h1><hr/>
             <div class="imageProduit"><img src="" alt=""/></div>
-            <div class="descriptionProduit">jlkhsdljkhsdjlhsdnml</div>
+            <div class="descriptionProduit"></div>
         </div>
     </div>
+    <script src="src/produitES5/produitES5.js"></script>
     <script src="src/index.js"></script>
 </body>
 
