--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             color: darkgreen;
             font-weight: 900;
         }
+        .produit.clicked{
+            box-shadow: 20px 20px 35px gray;
+        }
     </style>
 </head>
 
