--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         </div>
     </div>
     <script src="src/produitES5/produitES5.js"></script>
+    <script src="src/produitsES5/produitsES5.js"></script>
     <script src="src/index.js"></script>
 </body>
 
