produits avec load

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
             <div class="descriptionProduit"></div>
         </div>
     </div>
-    <script src="src/produitES5/produitES5.js"></script>
-    <script src="src/produitsES5/produitsES5.js"></script>
-    <script src="src/index.js"></script>
+    <!-- <script src="src/produitES5/produitES5.js"></script> -->
+    <!--<script src="src/produitsES5/produitsES5.js"></script> -->
+    <script src="src/index.js" type="module"></script>
 </body>
 
 </html>
