--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
     <div id="wrapper">
        
     </div>
-    <script src="src/produitES5/produitES6.js"></script>
-    <script src="src/produitsES6/ProduitsES6.js"></script>
-    <script src="src/index.js"></script>
+    <script src="src/produitsES6/ProduitsES6.js" type="module"></script>
+    <!-- <script src="src/index.js"></script> -->
 </body>
 
 </html>
