--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
     <div id="wrapper">
        
     </div>
-    <script src="src/produitsES6/ProduitsES6.js" type="module"></script>
+    <script src="src/index.js" type="module"></script>
+    <!-- <script src="src/produitsES6/ProduitsES6.js" type="module"></script> -->
     <!-- <script src="src/index.js"></script> -->
 </body>
 
