edition du formulaire

--- a/vues/produit-form.html
+++ b/vues/produit-form.html
@@ -1,5 +1,5 @@
 <div class="form-produit">
-    <form action="#" role="form" name="form-produit">
+    <form action="#" role="form" name="form-produit" id="form-produit">
         <legend>Edition d'un produit</legend>
 
         <div class="form-group" style="display: inline-block;">
